# mcp-quickstart

./: .gitignore  README.md  pyproject.toml  server.py  test_server.py
