[project]
name = "mcp-quickstart"
version = "0.1.0"
description = "A minimal, tested MCP server in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# The package is a single module (server.py); test_server.py is not shipped.
# Without this, setuptools' flat-layout autodiscovery sees two top-level modules
# and refuses to build.
[tool.setuptools]
py-modules = ["server"]

[tool.ruff]
line-length = 100
